--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
 
 </head>
 <body>
-	<h2>Hello World</h2>
-	<p>This file is hosted on Github Pages</p>
-	<?php echo 'PHP test'; ?>
+	<input id="person_name" type="text" name="person_name">
+	<button id="login" type="button">Log In</button>
+
+<script>
+	window.onload = function() {
+		var person_name = document.getElementById('person_name');
+		var loginButton = document.getElementById('login');
+		loginButton.addEventListener('click', function(){
+			alert('Hi '+ person_name.value);
+		}, true);
+	}
+</script>
 </body>
 </html>
